# flax-js

./: .env  .gitignore  README.md  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  weights.md
benchmark/flax-js/: run-gpt2.ts
benchmark/output/: torch-gpt2.txt
benchmark/pytorch/: accuracy.py  constants.py  utils.py
models/: constants.py  download_gpt2.py  load_gpt2.ts
scratch/: sentence.py
src/: index.ts  linear.ts  normalization.ts  utils.ts
src/core/: index.ts  normalization.ts
src/models/: gpt2.ts
src/models/gpt2/: load.ts  model.ts
src/nn/: combinators.ts  index.ts  linear.ts  module.ts  normalization.ts
